--- a/.github/workflows/predict_deploy_heal.yml
+++ b/.github/workflows/predict_deploy_heal.yml
@@ -1,31 +1,3 @@
-name: Predict, Deploy & Auto‑Heal Pipeline
-
-on:
-  workflow_dispatch:
-  push:
-    branches: ['*']
-
-permissions:
-  id-token: write
-  contents: read
-
-env:
-  AWS_DEFAULT_REGION: "${{ secrets.AWS_DEFAULT_REGION }}"
-  AWS_ACCOUNT_ID:     "${{ secrets.AWS_ACCOUNT_ID }}"
-  ECR_REPO:           "${{ secrets.ECR_REPO }}"
-  IMAGE_TAG:          "1.2-1-cpu-py3"
-  MODEL_IMAGE_URI:    "709825985650.dkr.ecr.ap-southeast-2.amazonaws.com/sagemaker-scikit-learn:1.2-1-cpu-py3"
-  MODEL_S3_PATH:      "${{ secrets.MODEL_S3_PATH }}"
-
-jobs:
-  build-deploy-heal:
-    runs-on: ubuntu-latest
-    env:
-      NS:     "${{ secrets.EKS_NAMESPACE        || 'prod' }}"
-      DEPLOY: "${{ secrets.EKS_DEPLOYMENT_NAME  || 'my-api-deployment' }}"
-      CTR:    "${{ secrets.EKS_CONTAINER_NAME   || 'api-container' }}"
-
-    steps:
     - uses: actions/checkout@v3
 
     - uses: aws-actions/configure-aws-credentials@v2
@@ -81,24 +53,29 @@ jobs:
     - name: Export PYTHONPATH for tests
       run: echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV
 
-    # --- Improvement #1: ensure sysstat (mpstat) is available ---
-    - name: Install metrics tools
+    # Ensure tools for metrics
+    - name: Install CLI tools (jq, sysstat, top exists)
       run: |
         sudo apt-get update
-        sudo apt-get install -y sysstat
+        sudo apt-get install -y jq sysstat
         mpstat -V || true
-    # -------------------------------------------------------------
 
     # ---------- Collect live build & test metrics ----------
     - name: Collect build metrics
+    # Optional toggle: set this in repo/Org env to get non-zero build_time
+      env:
+        TIMER_NO_CACHE: "${{ vars.TIMER_NO_CACHE || '0' }}"  # set to '1' to force no-cache
       id: metrics
       run: |
         set -euo pipefail
 
+        # Build timer image (optionally no-cache to avoid 0s when cache hits)
+        if [ "${TIMER_NO_CACHE}" = "1" ]; then NC="--no-cache"; else NC=""; fi
         build_start=$(date +%s)
-        docker build --platform linux/amd64 -t $ECR_REPO:test-timer ./app >/dev/null
+        docker build --platform linux/amd64 $NC -t $ECR_REPO:test-timer ./app >/dev/null
         build_time=$(( $(date +%s) - build_start ))
 
+        # Run tests & parse summary
         pytest -q | tee test.log || true
         failed=$(grep -oP '(?<= )[0-9]+(?= failed)' test.log || echo 0)
         passed=$(grep -oP '(?<= )[0-9]+(?= passed)' test.log || echo 0)
@@ -109,11 +86,14 @@ jobs:
           test_pass_rate=$(awk "BEGIN {printf \"%.2f\", $passed/$total}")
         fi
 
-        # --- Improvement #2: guard cpu_usage if mpstat not available/output missing ---
-        cpu_usage_raw=$(mpstat 1 5 2>/dev/null | awk '/Average/ {printf("%.0f",100-$NF)}' || true)
+        # CPU usage via mpstat, robust awk; fallback to top
+        cpu_usage_raw=$(mpstat 1 5 2>/dev/null | awk '/Average/ && $NF ~ /^[0-9.]+$/ {val=100-$NF} END {if (val=="") {print ""} else {printf("%.0f", val)}}')
+        if [ -z "${cpu_usage_raw}" ]; then
+          cpu_usage_raw=$(top -bn2 -d 0.5 | grep "Cpu(s)" | tail -1 | awk -F',' '{for(i=1;i<=NF;i++){if($i~/%id/){gsub(/[^0-9.]/,"",$i); print 100-$i}}}')
+        fi
         cpu_usage=${cpu_usage_raw:-0}
-        # ------------------------------------------------------------------------------
 
+        # Emit metrics JSON (only the features your model expects)
         metrics_json=$(jq -n -c \
           --arg bt "$build_time" \
           --arg ec "$failed" \
@@ -122,7 +102,16 @@ jobs:
           '{build_time:($bt|tonumber),error_count:($ec|tonumber),cpu_usage:($cu|tonumber),test_pass_rate:($tpr|tonumber)}')
 
         echo "Metrics → $metrics_json"
+        echo "$metrics_json" > metrics.json
         echo "json=$metrics_json" >> $GITHUB_OUTPUT
+
+    - name: Upload metrics artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: ci-metrics-${{ github.run_id }}
+        path: |
+          test.log
+          metrics.json
     # --------------------------------------------------------
 
     # ---------- Predict step (early) ----------
@@ -132,7 +121,6 @@ jobs:
         prob=$(python ml_model/predict_failure.py --plain --input-json '${{ steps.metrics.outputs.json }}')
         echo "Predicted failure probability: $prob"
         echo "fail_prob=$prob" >> $GITHUB_OUTPUT
-    # ----------------------------------------------------------------
 
     # ---------- Conditional Rollout based on prediction ----------
     - name: Rollout new image
@@ -142,7 +130,6 @@ jobs:
       run: |
         kubectl set image deployment/$DEPLOY $CTR=$IMAGE_URI -n $NS
         kubectl rollout status deployment/$DEPLOY -n $NS --timeout=180s
-    # ----------------------------------------------------------------
 
     - name: Auto‑heal if high failure risk
       if: ${{ steps.predict.outputs.fail_prob && fromJson(steps.predict.outputs.fail_prob) >= 0.7 }}
