--- a/app/src/requirements.txt
+++ b/app/src/requirements.txt
@@ -1,5 +1,8 @@
-flask==3.1.1
-flask-cors==6.0.1
-prometheus_client==0.20.0
-scikit-learn==1.7.1
-joblib==1.5.1
+Flask==2.3.3
+flask-cors==4.0.0
+gunicorn==21.2.0
+prometheus-client==0.20.0
+joblib==1.4.2
+numpy==2.0.2
+scikit-learn==1.7.0
+scipy==1.14.1
