--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,32 +1,18 @@
 {
-  "name": "ai-devops-dashboard",
-  "version": "0.1.0",
+  "name": "dashboard",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 5173 --strictPort --host"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.3",
-    "@react-three/drei": "^9.56.1",
-    "@react-three/fiber": "^8.18.0",
-    "class-variance-authority": "^0.7.1",
-    "framer-motion": "^10.12.16",
-    "lucide-react": "^0.271.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "recharts": "^2.7.2",
-    "tailwind-merge": "^3.3.1",
-    "three": "^0.179.0",
-    "tw-animate-css": "^1.3.6"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
-    "vite": "^4.4.9"
+    "@vitejs/plugin-react": "^4.3.1",
+    "vite": "^5.4.0"
   }
 }
